# fvd

./: README.md  pyproject.toml  setup.py
scripts/: example.py
src/fvd/: __init__.py  frechet_video_distance.py  metric.py
