[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fvd"
version = "0.1.0"
description = "Fréchet Video Distance"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "filelock==3.29.0",
    "fsspec==2026.3.0",
    "jinja2==3.1.6",
    "tqdm==4.68.3",
    "scipy==1.15.3",
    "torch==2.8.0+cu129",
    "torchmetrics==1.9.0",
    "torchvision==0.23.0+cu129",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }

[tool.setuptools.packages.find]
where = ["src"]